book table done

--- a/assets/css/main-scss/main.css
+++ b/assets/css/main-scss/main.css
@@ -224,6 +224,115 @@
   color: #fd9d3e;
 }
 
+.fifth-main {
+  height: 600px;
+  background-color: white;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.fifth-main .fifth-main-top-img {
+  position: absolute;
+  bottom: 99%;
+}
+.fifth-main .fifth-main-top-img img {
+  width: 100%;
+}
+.fifth-main .fifth-main-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 250px;
+  width: 100%;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part {
+  width: 500px;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part p {
+  font-family: Pacifico;
+  font-size: 32px;
+  color: #fd9d3e;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part h1 {
+  font-size: 45px;
+  color: #121619;
+  white-space: nowrap;
+  margin-top: 5px;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span {
+  width: 340px;
+  margin-top: 25px;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span span {
+  font-size: 11.5px;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number {
+  background-color: #121619;
+  width: 350px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 20px;
+  flex-direction: row;
+  border: 10px #fd9d3e solid;
+  margin-top: 25px;
+  transition: 1s all;
+  cursor: pointer;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number:hover {
+  background-color: white;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number:hover p {
+  color: #121619;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number:hover i {
+  color: #121619;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number p {
+  color: white;
+  font-size: 32px;
+}
+.fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number i {
+  color: white;
+  font-size: 25px;
+}
+.fifth-main .fifth-main-content .fifth-main-right-part {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.fifth-main .fifth-main-content .fifth-main-right-part form {
+  display: flex;
+  flex-direction: column;
+}
+.fifth-main .fifth-main-content .fifth-main-right-part form input {
+  margin-top: 25px;
+  border: 1px solid gray;
+  padding: 17px;
+  width: 550px;
+}
+.fifth-main .fifth-main-content .fifth-main-right-part form input:focus {
+  border: 1px solid #fd9d3e;
+}
+.fifth-main .fifth-main-content .fifth-main-right-part .fifth-main-button {
+  margin-top: 20px;
+}
+.fifth-main .fifth-main-content .fifth-main-right-part .fifth-main-button button {
+  padding: 20px 30px;
+  background-color: #121619;
+  color: white;
+  border-radius: 50px;
+  border: 1px #121619 solid;
+  font-weight: 700;
+  cursor: pointer;
+}
+.fifth-main .fifth-main-content .fifth-main-right-part .fifth-main-button button:hover {
+  color: #121619;
+  background-color: white;
+}
+
 /*#region Main-Banner-Responsive*/
 @media only screen and (max-width: 1680px) {
   .main-banner .main-first-part {
@@ -750,6 +859,223 @@
   .third-main .third-main-pizzas .third-main-pizza img {
     height: 150px;
     width: 150px;
+  }
+}
+/*#endregion */
+/*#region Main-Third-Responsive*/
+@media only screen and (max-width: 1570px) {
+  .fifth-main {
+    height: 600px;
+    background-color: white;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .fifth-main .fifth-main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 180px;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1430px) {
+  .fifth-main .fifth-main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 130px;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1300px) {
+  .fifth-main .fifth-main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 100px;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1230px) {
+  .fifth-main .fifth-main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 70px;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1140px) {
+  .fifth-main .fifth-main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 15px;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1020px) {
+  .fifth-main .fifth-main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10px;
+    width: 100%;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part {
+    width: 500px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part p {
+    font-family: Pacifico;
+    font-size: 32px;
+    color: #fd9d3e;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part h1 {
+    font-size: 45px;
+    color: #121619;
+    margin-top: 5px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span {
+    width: 340px;
+    margin-top: 25px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span span {
+    font-size: 11.5px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number {
+    background-color: #121619;
+    width: 270px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px;
+    flex-direction: row;
+    border: 10px #fd9d3e solid;
+    margin-top: 25px;
+    transition: 1s all;
+    cursor: pointer;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number:hover {
+    background-color: white;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number:hover p {
+    color: #121619;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number:hover i {
+    color: #121619;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number p {
+    color: white;
+    font-size: 22px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-number i {
+    color: white;
+    font-size: 20px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-right-part form input {
+    width: 450px;
+  }
+}
+@media only screen and (max-width: 850px) {
+  .fifth-main .fifth-main-content .fifth-main-right-part form input {
+    width: 400px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .fifth-main {
+    height: 1000px;
+    background-color: white;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .fifth-main .fifth-main-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span span {
+    text-align: center;
+  }
+  .fifth-main .fifth-main-content .fifth-main-right-part {
+    margin-top: 50px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-right-part form input {
+    width: 600px;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .fifth-main .fifth-main-content .fifth-main-right-part form input {
+    width: 500px;
+  }
+}
+@media only screen and (max-width: 525px) {
+  .fifth-main .fifth-main-content .fifth-main-left-part {
+    width: 100%;
+  }
+  .fifth-main .fifth-main-content .fifth-main-right-part form input {
+    width: 400px;
+  }
+}
+@media only screen and (max-width: 420px) {
+  .fifth-main .fifth-main-content .fifth-main-left-part p {
+    font-family: Pacifico;
+    font-size: 24px;
+    color: #fd9d3e;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part h1 {
+    font-size: 35px;
+    color: #121619;
+    white-space: nowrap;
+    margin-top: 5px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span {
+    width: 300px;
+    margin-top: 25px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span span {
+    font-size: 11.5px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-right-part form input {
+    width: 350px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .fifth-main .fifth-main-content .fifth-main-left-part {
+    width: 200px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part p {
+    font-family: Pacifico;
+    font-size: 22px;
+    color: #fd9d3e;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part h1 {
+    font-size: 32px;
+    color: #121619;
+    white-space: nowrap;
+    margin-top: 5px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span {
+    width: 270px;
+    margin-top: 25px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-left-part .fifth-main-left-part-span span {
+    font-size: 11px;
+  }
+  .fifth-main .fifth-main-content .fifth-main-right-part form input {
+    width: 280px;
   }
 }
 /*#endregion *//*# sourceMappingURL=main.css.map */
