--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,10 @@
   src: url(../fonts/Pacifico/Pacifico-Regular.ttf);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -41,6 +45,32 @@ $colorBlack: #121619;
 .opacityZero {
   opacity: 0;
 }
+
+.scroll-top {
+  position: fixed;
+  background-color: $colorOrange;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  border-radius: 50px;
+  cursor: pointer;
+  right: 2%;
+  bottom: 3%;
+  &:hover{
+    background-color: black;
+    i{
+      color: white;
+    }
+  }
+  i {
+    color: white;
+    font-size: 22px;
+  }
+}
+
 
 //Animations
 /*#region Animation*/
@@ -88,7 +118,33 @@ $colorBlack: #121619;
   }
 }
 
+@keyframes leftAnimation {
+  0%{
+    transform: translateX(-50%);
+    opacity: 0.5;
+  }
+
+  100%{
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+
+@keyframes rightAnimation {
+  0%{
+    transform: translateX(50%);
+    opacity: 0.5;
+  }
+
+  100%{
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
 /*#endregion */
+
+
 
 .fourth-main {
   height: 1400px;
@@ -96,5 +152,6 @@ $colorBlack: #121619;
   .fourth-main-header {
   }
 }
+
 
 
