--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -149,8 +149,74 @@ $colorBlack: #121619;
 /*#endregion */
 
 .fourth-main {
-  height: 1400px;
+  padding-bottom: 246px;
   background-color: $colorBlack;
-  .fourth-main-header {
+  .fourth-main-top-img {
+    img {
+      width: 100%;
+    }
+  }
+  &-content {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  &-header {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 70px 0px;
+    p {
+      font-family: Pacifico;
+      color: $colorOrange;
+      font-size: 35px;
+    }
+    h1 {
+      font-size: 50px;
+      color: white;
+    }
+  }
+
+  &-menu-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .active-li {
+      background-color: $colorOrange;
+      border-radius: 50px;
+    }
+    ul {
+      border-radius: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #2b2c2d;
+      li {
+        color: white;
+        padding: 20px 25px;
+        font-size: 14px;
+        font-weight: 600;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .menu-box {
+    margin-top: 50px;
+    background-color: #fd9d3e;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap:wrap;
+    &-element{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      width: 20%;
+      img{
+        width: 200px;
+      }
+    }
   }
 }
