--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -203,16 +203,20 @@ $colorBlack: #121619;
 
   .menu-box {
     margin-top: 80px;
+    background-color: RED;
     width: 80%;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    grid-gap: 20px 30px;
     &-element {
-      margin: 10px 30px;
+      margin: 20px 0px;
+
       display: flex;
       flex-direction: column;
       text-align: center;
       align-items: center;
-      width: 20%;
+      width: 100%;
       p {
         padding-top: 25px;
         color: white;
@@ -227,7 +231,7 @@ $colorBlack: #121619;
         padding: 12px 0px;
       }
       img {
-        width: 200px;
+        width: 60%;
       }
     }
   }
